--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.46"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 }
 
